just made some changes to make sure everything is working just fine

--- a/MySite/index.html
+++ b/MySite/index.html
@@ -6,6 +6,6 @@
     <title>Hello-Coursera</title>
 </head>
 <body>
-    <h1>Abdulkadir's Site</h1>
+    <h1>Abdulkadir's Site, I hope it's working.</h1>
 </body>
 </html>
